--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,10 @@ body {
 
   color: rgb(226, 64, 86);
   font-family:'Gill Sans';
-  font-size:35px;
-  flex-direction: row-reverse;
+  font-size:35px;  
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .formulario{
