--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(270deg, #08c8b8, #089cc8);
   background-size: 100% 100%;
-
+  z-index: 0;
   
 }
 
@@ -24,24 +24,27 @@ body {
   vertical-align: auto;
   background-color: white;
   height: 80px;
-  box-shadow: 0px 0px 5px 0px;
-  
+  box-shadow: 0px 0px 7px 0px;
+  z-index: 3;
+
+    
 }
 
 .header img{
   height: 60px;
   position:inherit;
   padding: 5px;
-  display:block;
+  float: left;
 }
 
-.header p{
-  
-  position:inherit;
-  float: right;
-  font-style:italic;
-  font-weight: bold;
-  margin-right: 10px;
+.header h4{
+  position: inherit;
+  text-align: center;
+  display: inline-flex;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .titulo{
@@ -55,19 +58,20 @@ body {
 }
 
 .formulario{
-  color: rgb(255, 255, 255);
+  margin: 20px;
   padding: 80px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 30px;
+  margin-right: 30px;
   width: auto;
   height: auto;
-  vertical-align:center;
-  align-content: center;
-  align-items: center;
   text-align: center;
   font-size: 18px;
   margin-bottom: 20px;
   display: flexbox;
+  background-color: rgba(231, 231, 231, 0.76);
+  border-radius: 300px;
+  z-index: 0;
+  box-shadow: 0px 0px 7px 0px;
 }
 
 .card{
@@ -78,7 +82,8 @@ body {
   position: relative;
   display: flexbox;
   padding:0px;
-  background-color: rgb(231, 231, 231);
+  background-color: rgba(231, 231, 231, 0.521);
+  z-index: 0;
 }
 
 .row{
@@ -97,4 +102,9 @@ body {
   margin-top: 8px;
   border-radius: 8px;
 }
+
+#alert{
+  display: none;
+}
+
 
