--- a/src/index.css
+++ b/src/index.css
@@ -60,16 +60,16 @@ body {
 .formulario{
   margin: 20px;
   padding: 80px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
   width: auto;
   height: auto;
   text-align: center;
   font-size: 18px;
   margin-bottom: 20px;
   display: flexbox;
-  background-color: rgba(231, 231, 231, 0.76);
-  border-radius: 300px;
+  background-color: rgba(255, 255, 255, 0.76);
+  border-radius: 20px;
   z-index: 0;
   box-shadow: 0px 0px 7px 0px;
 }
@@ -103,8 +103,8 @@ body {
   border-radius: 8px;
 }
 
-#alert{
-  display: none;
+.defecto{
+  color: darkgray;
 }
 
 
